fixed formatting, collapse bar and made space for information

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,13 @@
+html, body {
+    margin:0;
+
+    padding:0;
+}
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
 
 /* navbar */
 
@@ -7,7 +17,7 @@
 .navbar-default {
     background-color: #2E2E2E;
 
-   
+
     /*border-color: #0066CC;*/
     border-radius: 0px;
     border: 0px;
@@ -23,8 +33,19 @@
 .navbar .navbar-collapse {
     text-align: center;
     border: none;
+    line-height: 0px;
     padding: 0px;
+    box-shadow: none;
+    padding-right: 0px;
+    z-index: 2;
 }
+.navbar .navbar-collapse > ul,
+ .navbar .navbar-collapse > ul > li{
+background-color: #2E2E2E;
+z-index: 2;
+padding-right: 10px;
+}
+
 /* title */
 .navbar-default .navbar-brand {
     color: #777;
@@ -65,6 +86,7 @@
     color: #336600;
     background-color: transparent;
 }
+
 .dropdown-menu > li > a {
     color: #fff;
 }
@@ -82,9 +104,9 @@
 }
 
 .navbar-default {
-        -webkit-box-shadow: 0 8px 6px -6px #999;
-       -moz-box-shadow: 0 8px 6px -6px #999;
-            box-shadow: 0 8px 6px -6px #999;
+    -webkit-box-shadow: 0 8px 6px -6px #999;
+    -moz-box-shadow: 0 8px 6px -6px #999;
+    box-shadow: 0 8px 6px -6px #999;
 }
 
 
@@ -96,5 +118,23 @@
 }
 
 .row {
-    margin-top: 5%;
+    margin-top: 2%;
+}
+
+#slider {
+    z-index: 1;
+}
+
+.green {
+    background-color: green;
+    min-height: 150px;
+}
+.blue {
+    background-color: blue;
+    min-height: 150px;
+}
+
+.footer {
+    margin: 0px;
+    margin-top: 40px;
 }
